tests/ui/empty_enum.rs
use enum_select::EnumSelect;

#[derive(EnumSelect)]
#[repr(usize)]
enum Infallible {}

fn main() {}
